<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_Listfood"
        android:icon="@drawable/ic_restaurant_food_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_list_bill"
        android:icon="@drawable/ic_restaurants_bill_black_24dp"
        android:title="@string/title_dashboard"/>
    <item
        android:id="@+id/navigation_list_comment"
        android:icon="@drawable/ic_restaurants_user_comment_black_24dp"
        android:title="@string/str_frament_comment" />
    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_restaurants_setting_black_24dp"
        android:title="@string/title_notifications" />
</menu>
