<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center_horizontal|bottom"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image_test"
        android:layout_width="40dp"
        android:layout_height="40dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/str_them_mon_an"
        android:textColor="#5E3425"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:weightSum="10">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:weightSum="14"
            android:orientation="vertical">
            <EditText
                android:layout_weight="2"
                android:id="@+id/name_food_add_in_res"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:hint="@string/str_nameQuan"
                android:textAlignment="viewStart"
                android:textSize="15sp" />

            <EditText
                android:layout_weight="2"
                android:id="@+id/price_food_add_in_res"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:hint="@string/str_gia_mon"
                android:textAlignment="viewStart"
                android:textSize="15sp" />
            <EditText
                android:layout_weight="2"
                android:id="@+id/des_food_add_in_res"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:hint="@string/str_mota_mon"
                android:textAlignment="viewStart"
                android:textSize="15sp" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                android:layout_weight="1"
                android:id="@+id/src_image_add_food_res"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginVertical="5dp"
                android:hint="@string/str_diachi"
                android:textAlignment="viewStart"
                android:textSize="15sp" />
            <Button
                android:hint="@string/str_button_click_image"
                android:textAlignment="center"
                android:id="@+id/button_find_image_off_food"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:weightSum="11">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:visibility="invisible" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="3"
            android:id="@+id/button_add_food_in_res"
            android:text="@string/str_signup" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:visibility="invisible" />
    </LinearLayout>

</LinearLayout>