<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/backGroundNewOrder"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginBottom="10dp">
        <LinearLayout
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/str_ten_mon"
                android:textStyle="bold"/>
            <EditText
                android:layout_marginLeft="5dp"
                android:id="@+id/edit_food_name"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="5dp"
    android:layout_marginBottom="10dp">
    <LinearLayout
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/str_gia_mon"
            android:textStyle="bold"/>
        <EditText
            android:layout_marginLeft="5dp"
            android:id="@+id/edit_food_price"
            android:layout_weight="1"
            android:inputType="number"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <ImageView
                android:layout_marginLeft="5dp"
                android:id="@+id/edit_food_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1" />
            <Button
                android:layout_marginLeft="5dp"
                android:hint="@string/str_button_click_image"
                android:textStyle="bold"
                android:textSize="20dp"
                android:id="@+id/edit_food_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end" />
        </LinearLayout>
    </android.support.v7.widget.CardView>


    <Button
        android:layout_marginLeft="5dp"
        android:id="@+id/start_edit_food_button"
        android:layout_gravity="end"
        android:hint="@string/str_edit"
        android:textStyle="bold"
        android:textSize="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>