<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/gradient"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".Activity.NewOrderActivity">

    <android.support.v7.widget.CardView
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:id="@+id/parent0"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="30dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="7dp"
                android:textSize="30sp"
                android:textStyle="bold"
                android:text="Chi Tiết Hóa Đơn"
                android:id="@+id/bill_detail_bill_id"
                android:textColor="@color/colorAccent"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_below="@id/parent0"
        android:id="@+id/parent1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginBottom="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="7dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/customer_addr"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:text="addr"
                android:id="@+id/bill_detail_customer_addr"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/parent2"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@+id/parent1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginBottom="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="7dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/restaurant_addr"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:text="addr"
                android:id="@+id/bill_detail_restaurant_addr"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@+id/parent2"
        android:layout_marginBottom="30dp"
        android:background="@drawable/gradient"
        android:layout_width="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.v7.widget.CardView
                android:background="@drawable/gradient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="7dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/detail"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:background="@drawable/gradient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginHorizontal="7dp"
                    android:id="@+id/bill_detail_recycler_view"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:background="@drawable/gradient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_marginTop="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="7dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:text="@string/total"
                        android:textStyle="bold"/>
                    <TextView
                        android:textAlignment="textEnd"
                        android:textColor="@color/colorAccent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/bill_detail_total"
                        android:textSize="22sp"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:text="Từ Chối đơn hàng"
        android:id="@+id/buttonTuChoiOrder"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_weight="1" />

    <Button
        android:layout_marginRight="5dp"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="Xác nhận giao hàng"
        android:id="@+id/buttonAcceptOrder"
        android:layout_width="190dp"
        android:layout_height="60dp" />

</RelativeLayout>